wip: color update

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1389,6 +1389,11 @@ select {
   background-color: rgba(196, 203, 202, var(--tw-bg-opacity));
 }
 
+.bg-disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgba(108, 117, 125, var(--tw-bg-opacity));
+}
+
 .focus\:bg-white:focus {
   --tw-bg-opacity: 1;
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
@@ -3248,6 +3253,11 @@ select {
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgba(239, 68, 68, var(--tw-text-opacity));
+}
+
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgba(228, 228, 231, var(--tw-text-opacity));
 }
 
 .text-gray-500 {
